Fix heading sizes, spacing

--- a/src/components/sections/about/hero/hero.module.scss
+++ b/src/components/sections/about/hero/hero.module.scss
@@ -72,6 +72,8 @@
 
 @media (min-width: $screen-md) {
   .section {
+    margin-top: 60px;
+
     .main-features {
       padding-left: 0;
       margin-left: 0;
